# wallet-wrapped

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  update-card.yml
scripts/: generate_card.py
tests/: test_api.py  test_svgcard.py  test_wrapped.py
wallet_wrapped/: __init__.py  api.py  cli.py  report.py  sample_data.py  svgcard.py  wrapped.py
